# browserlify

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.cn  README.md
scripts/: entrypoint.sh
src/: content.rs  debugger.rs  devices.rs  error.rs  headless.rs  main.rs  session.rs
src/remote/: README.md  chrome.rs  firefox.rs  mod.rs  tests.rs  x11vnc.rs
src/tests/: mod.rs  test_browser.rs  test_client.rs  test_content.rs
test_assets/: index.html
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
web/src/: App.vue  main.js  output.css
web/src/compontents/: Button.vue  Confirm.vue  Input.vue  Modal.vue  Select.vue  Tip.vue
web/src/compotents/: Button.vue  Confirm.vue  Input.vue
web/src/view/: Dashboard.vue
